# dsp_atoms

./: .gitignore  LICENSE  README.md
src/: AtomBiquad.cpp  AtomBiquad.h  AtomDiode.cpp  AtomDiode.h  AtomGain.cpp  AtomGain.h  AtomHelper.h  AudioAtom.cpp  AudioAtom.h  AudioTypes.h  ResampleFIRCoeffs.h  Resampler.cpp  Resampler.h  Sample.cpp  Sample.h  UpFirDown.cpp  UpFirDown.h
tests/: AtomBiquadTests.cpp  AtomDiodeTests.cpp  AtomGainTests.cpp  BiquadTests.cpp  CMakeLists.txt  ResamplerTests.cpp  TestUtils.cpp  TestUtils.h  UpFirDownTests.cpp  main.cpp
tests/ref/: AtomBiquad_APF_500Hz_0707q_0dB_IR.txt  AtomBiquad_Bypass_IR.txt  AtomBiquad_HPF6DB_500Hz_0707q_0dB_IR.txt  AtomBiquad_HPF_500Hz_0707q_0dB_IR.txt  AtomBiquad_HSH_8kHz_0707q_3dB_LSH_300Hz_0707q_m10dB_2ch_IR.txt  AtomBiquad_HSH_8kHz_0707q_3dB_LSH_300Hz_0707q_m10dB_IR.txt  AtomBiquad_LPF6DB_500Hz_0707q_0dB_IR.txt  AtomBiquad_LPF_500Hz_0707q_0dB_IR.txt  AtomBiquad_LPF_8kHz_1500q_3dB_HPF_300Hz_5000q_m10dB_IR.txt  AtomBiquad_LSH_8kHz_1500q_3dB_HSH_300Hz_5000q_m10dB_IR.txt  AtomBiquad_NOTCH_100Hz_1000q_10dB_8kHz_10000q_m10dB_IR.txt  AtomBiquad_PEAK_100Hz_5000q_10dB_8kHz_10000q_m10dB_IR.txt  biquad_bypass_ir.txt  square1k_at_48k.h  square1k_at_48k_down5th.h  square1k_at_48k_up5th.h
tools/scripts/: adsr.py  dbfft.py  diode.py  gen_flac.py  gen_ref.py  gen_resample_firs.py  genwav.py  impdistest.py  jfet.py  rdwav.py  wav2h.py  wav2mono.py  wavtrim.py
